# GFPGAN

./: AGENTS.md  README.md  cog_predict.py  inference_gfpgan.py  pyproject.toml  requirements.txt  setup.py
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_conventions.md  suggested_commands.md
gfpgan/: __init__.py  torchvision_compat.py  train.py
scripts/: parse_landmark.py
tests/: test_gfpgan_model.py  test_torchvision_compat.py
